<resources>
    <string name="app_name">WGU Progress Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_term">TermActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_term">AddTermActivity</string>
    <string name="term_name">Term Name</string>
    <string name="enter_the_term_information_and_press_the_save_button_to_add_the_term">Enter the term information and press the Save button to add the term.</string>
    <string name="ex_amazing_first_term">Ex: Amazing first term</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="title_activity_terms">Terms</string>
    <string name="name">name</string>
    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="AddModTerm">Add Term</string>
    <string name="title_activity_mentors">Mentors</string>
    <string name="title_activity_add_mentor">AddMentorActivity</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_assessments">Assessments</string>
    <string name="title_activity_add_course">AddCourse</string>

    <string-array name="spinner_status">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan To Take</item>
    </string-array>
    <string-array name="spinner_type">
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>
    <string name="title_activity_assessment">Assessment</string>
    <string name="title_activity_add_assessment">AddAssessment</string>
    <string name="enter_the_assessment_information_and_press_the_save_button_to_add_the_assessment">Enter the assessment information and press the Save Button to add the Assessment.</string>
    <string name="ex_amazing_first_assessment">ex: Amazing first assessment</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="title_activity_course_assessments">CourseAssessments</string>
    <string name="title_activity_term_course">Term Courses</string>
    <string name="title_activity_term_courses">TermCourses</string>
    <string name="title_activity_course_notes">CourseNotes</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
</resources>
