<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.AddAssessment"
    tools:showIn="@layout/activity_add_assessment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addAssessmentInstructionsTV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/enter_the_assessment_information_and_press_the_save_button_to_add_the_assessment"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:text="Type"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:text="Course"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerCourse"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assessmentNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:text="@string/assessment_name"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/assessmentNameET"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:text="Due Date"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/dueDateET"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/mm_dd_yyyy"
                    android:importantForAutofill="no"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/endDateTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:text="Goal Date"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/goalDateET"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/mm_dd_yyyy"
                    android:importantForAutofill="no"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/goalDateAlertCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Goal Date Alert?"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/saveAssessmentBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="0dp"
                android:text="SAVE"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>